# libft

./: .gitignore  CMakeLists.txt  Makefile  a.out  ft_atoi.c  ft_bzero.c  ft_calloc.c  ft_isascii.c  ft_isdigit.c  ft_itoa.c  ft_lstadd_back.c  ft_lstadd_back_bonus.c  ft_lstadd_front_bonus.c  ft_lstclear_bonus.c  ft_lstdelone.c  ft_lstdelone_bonus.c  ft_lstiter_bonus.c  ft_lstlast.c  ft_lstmap_bonus.c  ft_lstnew.c  ft_lstsize.c  ft_memchr.c  ft_memcmp.c  ft_memcpy.c  ft_memmove.c  ft_memset.c  ft_putchar_fd.c  ft_putendl_fd.c  ft_putnbr_base_fd.c  ft_putnbr_fd.c  ft_putstr_fd.c  ft_split.c  ft_strchr.c  ft_strcmp.c  ft_strdup.c  ft_striteri.c  ft_strjoin.c  ft_strlcat.c  ft_strlcpy.c  ft_strlen.c  (+11 more)
fonc_libc/: ft_bzero.c  ft_calloc.c  ft_isalnum.c  ft_isalpha.c  ft_isascii.c  ft_isdigit.c  ft_isprint.c  ft_memset.c  ft_strchr.c  ft_strcmp.c  ft_strlen.c  ft_strstr.c  ft_tolower.c  ft_toupper.c  main.c
fonc_supp/: ft_itoa.c  ft_putchar_fd.c  ft_putendl_fd.c  ft_putnbr_fd.c  ft_putstr_fd.c  ft_split.c  ft_strjoin.c  ft_substr.c
includes/: array.h  char.h  file.h  io.h  libft.h  memory.h  number.h  str.h
srcs/array/: CMakeLists.txt  ft_add_array_line.c  ft_array_dup.c  ft_array_length.c  ft_sort_array.c
srcs/char/: CMakeLists.txt  ft_isalnum.c  ft_isalpha.c  ft_isprint.c
srcs/file/: CMakeLists.txt  ft_file_in_char.c
srcs/io/: CMakeLists.txt  ft_dprintf.c  ft_putchar_fd.c  ft_putendl_fd.c  ft_putnbr_fd.c  ft_putstr_fd.c
srcs/list/: CMakeLists.txt  ft_lstdelone_bonus.c  ft_lstnew_bonus.c
srcs/memory/: CMakeLists.txt  ft_bzero.c  ft_calloc.c
srcs/number/: ft_atoi.c  ft_itoa.c
srcs/numbers/: CMakeLists.txt  ft_atoi.c  ft_itoa.c
srcs/str/: CMakeLists.txt  ft_split.c  ft_strchr.c  ft_strcmp.c  ft_strdup.c  ft_strjoin.c  ft_strlen.c
